v1_19/06/2022_17:51 Comçando a fazer a navbar

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nav.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Document</title>
 </head>
 <body>
+    <nav class="navBar">
+        <ul class="ulBar">
+            <li class="ops">Home</li>
+            <li class="ops">Sobre</li>
+            <li class="ops">Projetos</li>
+            <li class="ops">Contato</li>
+        </ul>
+    </nav>
     <div class="page home">
         <div>
             <h1 class="hr">Ola, <br> meu nome é Hakki</h1>
