v1_19/06/2022_18:04 Fazendo o sistema de abertura da navbar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navBar">
+    <nav class="navBar ModeOpen">
         <ul class="ulBar">
             <li class="ops">Home</li>
             <li class="ops">Sobre</li>
             <li class="ops">Projetos</li>
             <li class="ops">Contato</li>
         </ul>
+        <input type="checkbox" id="openB">
     </nav>
     <div class="page home">
         <div>
